--- a/css/style.css
+++ b/css/style.css
@@ -70,13 +70,15 @@ h6 {
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   grid-gap: 20px;
   margin-bottom: 20px;
+  
 }
 
-.image-holder > img {
+.image-holder  img {
   width: 100%;
   /* height: 100%; */
   object-fit: cover;
   object-position: center;
+  margin-top: 20px;
 }
 
 .commitee-names {
