--- a/css/style.css
+++ b/css/style.css
@@ -70,13 +70,12 @@ h6 {
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   grid-gap: 20px;
   margin-bottom: 20px;
-  
 }
 
-.image-holder  img {
+.image-holder img {
   width: 100%;
   /* height: 100%; */
-  object-fit: cover;
+  object-fit: contain;
   object-position: center;
   margin-top: 20px;
 }
@@ -88,6 +87,19 @@ h6 {
   margin-bottom: 20px;
   font-family: "Roboto Slab", serif;
 }
+@media (max-width: 768px) {
+  .image-holder {
+    display: block;
+  }
+  .image-holder img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    margin-top: 20px;
+  }
+}
+
 /* ================================================= */
 /* ------------------ Header CSS ------------------- */
 /* ================================================= */
