--- a/css/style.css
+++ b/css/style.css
@@ -84,9 +84,16 @@ h6 {
   text-align: center;
   font-size: 20px;
   font-weight: 700;
-  margin-bottom: 20px;
   font-family: "Roboto Slab", serif;
 }
+
+.position {
+  text-align: center;
+  font-size: 15px;
+  font-weight: 200;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 @media (max-width: 768px) {
   .image-holder {
     display: block;
