--- a/css/style.css
+++ b/css/style.css
@@ -87,6 +87,30 @@ h6 {
   font-family: "Roboto Slab", serif;
 }
 
+
+.image-holder-program {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-gap: 20px;
+  margin-bottom: 20px;
+}
+
+.image-holder-program img {
+  width: 100%;
+  /* height: 100%; */
+  object-fit: contain;
+  object-position: center;
+  margin-top: 20px;
+}
+
+.commitee-names-program {
+  text-align: left;
+  font-size: 20px;
+  font-weight: 700;
+  font-family: "Roboto Slab", serif;
+}
+
+
 .position {
   text-align: center;
   font-size: 15px;
