--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ a:focus {
 
 p {
   padding: 0;
-  margin: 0 0 30px 0;
+  margin: 0 0 8px 0;
 }
 
 h1,
@@ -104,6 +104,7 @@ h6 {
 }
 
 .commitee-names-program {
+  margin: 0;
   text-align: left;
   font-size: 20px;
   font-weight: 700;
@@ -116,7 +117,9 @@ h6 {
   font-size: 15px;
   font-weight: 200;
   font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
 }
+
 
 @media (max-width: 768px) {
   .image-holder {
@@ -358,7 +361,7 @@ h6 {
   text-align: left;
   font-size: 45px;
   color: #fff;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
   letter-spacing: 1px;
 }
 
@@ -370,6 +373,15 @@ h6 {
   text-transform: uppercase;
   letter-spacing: 1px;
 }
+@media (max-width: 767.98px) {
+.banner1-header1{
+  margin-bottom: 20px;
+  text-align: center;
+  font-size: 25px;
+  color: #fff;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}}
 .banner .banner-nav {
   text-align: right;
 }
@@ -914,7 +926,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   font-size: 16px;
   line-height: 25px;
   font-weight: 300;
-  margin-bottom: 20px;
+  margin-bottom: 0px;
 }
 
 #speaker .content-col a {
@@ -952,7 +964,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 #agenda {
   position: relative;
-  padding: 80px 0 90px 0;
+  padding: 80px 0 5px 0;
   background: #f2f2f2;
 }
 
