--- a/css/style.css
+++ b/css/style.css
@@ -1582,3 +1582,82 @@ body.mobile-nav-active #mobile-nav-toggle {
   width: 100%;
   color: #000;
 }
+
+
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+
+.dropdown .dropbtn {
+  font-size: 16px;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+.navbar a:hover,
+.dropdown:hover .dropbtn {
+  background-color: red;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.para{
+  margin-top:2%;
+  /* margin-left:10%;
+  margin-right:10%; */
+}
+
+.img-fluid{
+  width: 100%;
+}
+@media (max-width: 768px) {
+.img-fluid{
+  width: 80%;
+  text-align: center;
+  
+}
+.img-fluid img{
+  align-items: center;
+  text-align: center;
+}
+}
+.partners{
+  width: 100%;
+}
+
+@media (max-width: 768px) {
+.partners img{
+  width: 30px;
+
+}
+}
