--- a/css/style.css
+++ b/css/style.css
@@ -1661,3 +1661,10 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 }
 }
+
+.submitbtn{
+  background-color: #d2691e;
+  color:#fff;
+  padding: 20px;
+  font-weight: 800;
+}
