--- a/css/style.css
+++ b/css/style.css
@@ -1751,3 +1751,32 @@ body.mobile-nav-active #mobile-nav-toggle {
   font-size: 25px;
   color: red;
 }
+
+
+
+.card {
+  z-index: 1;
+  float: left;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 100%;
+  border-radius: 5px;
+}
+
+.card:hover {
+  
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.card img {
+  width: 100%;
+  /* height: 200px; */
+  border-radius: 5px 5px 0 0;
+}
+
+.containerhome{
+  /* padding: 8px 16px; */
+  color: black;
+
+  
+}
