--- a/css/style.css
+++ b/css/style.css
@@ -1780,3 +1780,14 @@ body.mobile-nav-active #mobile-nav-toggle {
 
   
 }
+
+.pdfviewer{
+  width: 100%;
+  height: 100%;
+}
+@media (max-width: 768px) {
+  .pdfviewer{
+    width: 100%;
+    height: 720px;
+  }
+}
