Added tech-com, updated navbar, added sponsors

--- a/css/style.css
+++ b/css/style.css
@@ -1508,6 +1508,38 @@ body.mobile-nav-active #mobile-nav-toggle {
   padding-top: 30px;
 }
 
+#card {
+  
+  box-sizing: border-box;
+  height: 254px;
+  width: 30%;
+  background: rgba(217, 217, 217, 0.58);
+  border: 1px solid white;
+  box-shadow: 12px 17px 51px rgba(0, 0, 0, 0.22);
+  backdrop-filter: blur(6px);
+  border-radius: 17px;
+  text-align: center;
+  cursor: pointer;
+  transition: all 0.5s;
+  display: flex;
+  margin: auto;
+  margin-top: 100px;
+  align-items: center;
+  user-select: none;
+  font-weight: bolder;
+  color: black;
+
+}
+
+#card:hover {
+  border: 1px solid black;
+  transform: scale(1.05);
+}
+
+#card:active {
+  transform: scale(0.95) rotateZ(1.7deg);
+}
+
 /* ================================================= */
 /* ------------ Responsive Section Header ---------- */
 /* ================================================= */
