--- a/css/style.css
+++ b/css/style.css
@@ -149,6 +149,7 @@ h6 {
 
 .container1{  
     width: 100%;
+    height: 500px;
     margin: auto;
     display: flex;
 
@@ -658,6 +659,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #card{
+  height: 400px;
   margin: auto;
 }
 
