--- a/css/style.css
+++ b/css/style.css
@@ -82,9 +82,13 @@ h6 {
 
 .commitee-names {
   text-align: center;
-  font-size: 20px;
+  font-size: 25px;
   font-weight: 700;
   font-family: "Roboto Slab", serif;
+}
+
+.image-holder a{
+  color: #d2691e !important;
 }
 
 .image-holder-program {
@@ -112,8 +116,8 @@ h6 {
 
 .position {
   text-align: center;
-  font-size: 15px;
-  font-weight: 200;
+  font-size: 16px;
+  font-weight: 300;
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
 }
@@ -977,13 +981,25 @@ body.mobile-nav-active #mobile-nav-toggle {
 /* ================================================= */
 
 #agenda {
+  margin: 0 5rem;
+  width: 120%;
   position: relative;
-  padding: 80px 0 5px 0;
+  padding: 90px 15px 55px 0;
   background: #f2f2f2;
 }
 
-#agenda .container {
+/* #agenda .container {
   max-width: 700px;
+} */
+.org-img{
+  margin-top: 0px !important;
+  width: 300px;
+  height: 300px;
+}
+.image-holder{
+  object-fit: fill;
+  display: grid;
+  align-items: start;
 }
 
 #agenda .row {
