Updated organizing committe, submission guidelines and deadlines

--- a/css/style.css
+++ b/css/style.css
@@ -1010,6 +1010,10 @@ body.mobile-nav-active #mobile-nav-toggle {
 #agenda .row:first-child {
   padding-top: 0;
 }
+/* #agenda .container:nth-child(4) {
+  padding-top: 0;
+  margin-top: 200px !important;
+} */
 
 #agenda .text-right {
   border-right: 1px dotted #666;
