--- a/css/style.css
+++ b/css/style.css
@@ -158,7 +158,7 @@ h6 {
   height: 500px;
   margin: 1% -10%;
   display: flex;
-
+  margin-bottom: 35px;
 }
 
 #header.header-scrolled {
@@ -2052,5 +2052,45 @@ body.mobile-nav-active #mobile-nav-toggle {
   .pdfviewer {
     width: 100%;
     height: 720px;
+  }
+}
+
+.accept-btn {
+  width: 170px;
+  padding: 10px;
+  background: rgba(217, 217, 217, 0.58) !important;
+  border: none;
+  border-radius: 5px;
+  border: 2px solid black;
+  cursor: pointer;
+  transition: background-color 0.3s ease, transform 0.3s ease;
+  text-align: center;
+  display: inline-block;
+  font-family: 'Arial', sans-serif;
+}
+
+.accept-btn:hover {
+  background-color: rgba(217, 217, 217, 0.8);
+  transform: scale(1.05);
+  border: 2px solid #d2691e;
+}
+
+.accept-btn a {
+  text-decoration: none;
+  color: #000;
+  display: block;
+  object-fit: contain;
+  background: none !important;
+  transition: color 0.3s ease;
+}
+
+.accept-btn:hover a {
+  color: #333 !important;
+}
+
+@media (max-width: 768px) {
+  .accept-btn {
+    width: 100%;
+    padding: 12px;
   }
 }
