--- a/css/style.css
+++ b/css/style.css
@@ -470,6 +470,16 @@ h6 {
   letter-spacing: 1px;
 }
 
+.conference-info {
+  text-align: center;
+  color: #ddd;
+  white-space: normal; 
+  word-wrap: break-word; 
+  max-width: 100%;
+  margin: 0 auto;
+  padding: 10px 15px;
+}
+
 @media (max-width: 767.98px) {
   .banner1-header1 {
     margin: 30px;
@@ -797,7 +807,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 
   #about .about-col-1,
   #about .about-col-2 {
-    margin: 0 15px;
+    margin: 0 ;
   }
 }
 
@@ -808,7 +818,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 #about .about-col-1::before {
   position: absolute;
   content: "";
-  width: 40px;
+  width: 100%;
   height: 40px;
   top: calc(50% - 20px);
   right: -20px;
@@ -910,7 +920,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 #about .about-des .about-img::before {
   position: absolute;
   content: "";
-  width: 40px;
+  width: 100%;
   height: 40px;
   bottom: -20px;
   right: calc(50% - 20px);
@@ -1924,7 +1934,6 @@ body.mobile-nav-active #mobile-nav-toggle {
 /* ================================================= */
 
 #indexspeaker {
-
   position: relative;
   padding: 80px 0 5px 0;
   background: #d2691e;
@@ -1932,10 +1941,18 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 #indexspeaker .container {
   max-width: 700px;
+  width: 100%; 
+  max-width: none;
+  padding: 0;
+}
+
+#contact .row{
+  margin-left: 15%;
 }
 
 #indexspeaker .row {
   padding-top: 45px;
+  margin: 0;
   border-bottom: 1px dotted #666;
 }
 
@@ -1964,6 +1981,9 @@ body.mobile-nav-active #mobile-nav-toggle {
   #indexspeaker h2 {
     font-size: 20px;
     font-weight: 400;
+  }
+  #contact .row{
+    margin: 0;
   }
 }
 
