--- a/css/style.css
+++ b/css/style.css
@@ -1936,6 +1936,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 #indexspeaker {
   position: relative;
   padding: 80px 0 5px 0;
+  width: 120%;
   background: #d2691e;
 }
 
@@ -1947,7 +1948,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #contact .row{
-  margin-left: 15%;
+  margin-left: 1.3rem;
 }
 
 #indexspeaker .row {
@@ -1978,6 +1979,10 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 @media (max-width: 575.98px) {
+  #indexspeaker{
+      width: 100%;
+  }
+
   #indexspeaker h2 {
     font-size: 20px;
     font-weight: 400;
